tests/paczka1/fuzzy1/90481124.err
Error in line 1: P0fuE6YF A283 94,8
Error in line 4: Upyr A283 14,1
Error in line 6: Upyr A243 67,6
Error in line 14: A283 A342 3U,8
Error in line 16: Upyr A283 17,55
Error in line 10: NVgd A342 84,4
Error in line 32: NVgd A283 48,5
Error in line 15: P0fuE6YF A243 52,7
Error in line 11: Upyr A283 8,2
